// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxWidget renders a checkbox widget component 1`] = `
<DocumentFragment>
  <div
    class="inline field field-wrapper-checkbox-widget"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="wrapper"
          >
            <div
              class="ui checkbox"
            >
              <input
                class="hidden"
                id="field-checkbox-widget"
                name="field-checkbox-widget"
                readonly=""
                tabindex="0"
                type="checkbox"
                value=""
              />
              <label
                for="field-checkbox-widget"
              >
                Checkbox Widget
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxWidget renders a checkbox widget component checked 1`] = `
<DocumentFragment>
  <div
    class="inline field field-wrapper-checked-checkbox-widget"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="twelve wide column"
        >
          <div
            class="wrapper"
          >
            <div
              class="ui checked checkbox"
            >
              <input
                checked=""
                class="hidden"
                id="field-checked-checkbox-widget"
                name="field-checked-checkbox-widget"
                readonly=""
                tabindex="0"
                type="checkbox"
                value=""
              />
              <label
                for="field-checked-checkbox-widget"
              >
                Checked Checkbox Widget
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
